# PrimeMH

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  app.manifest  build.rs  settings.toml
src/: logger.rs  main.rs  settings.rs
src/gui/: draw_buff_bar.rs  draw_item_log.rs  draw_item_tooltip.rs  draw_lines.rs  draw_map.rs  draw_objects.rs  draw_party_info.rs  draw_path.rs  draw_presets.rs  draw_units.rs  egui.rs  hotkeys.rs  images.rs  internationalization.rs  mod.rs  ui.rs  util.rs
src/localisation/: localisation.rs  localisation_file_parser.rs  mod.rs
src/localisation/reference/: primemh.json
src/mapgeneration/: blacha.rs  cache.rs  jsondata.rs  mapgrid.rs  mapimages.rs  mod.rs  pathfind.rs  pois.rs  seeddata.rs  walkableexits.rs
src/memory/: decrypt.rs  gamedata.rs  instance_manager.rs  mod.rs  process.rs  structs.rs
src/memory/types/: buffs.rs  enchants.rs  item.rs  item_filter.rs  keybindings.rs  last_hovered.rs  menus.rs  missile.rs  mod.rs  npc.rs  object.rs  player.rs  roster.rs  seedvalues.rs  skills.rs  states.rs  stats.rs
