[package]
name = "PrimeMH"
version = "0.5.7"
edition = "2021"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1

[build-dependencies]
copy_to_output = "2.0.0"
winres = "0.1"

[dependencies]
winapi = { version = "0.3.9", features = [
    "ntdef",
    "processthreadsapi",
    "handleapi",
    "memoryapi",
    "wincon",
] }
sysinfo = { version = "0.26.4" }
chrono = "0.4"

num-traits = "0.2"
num-derive = "0.4.2"
derivative = "2.2.0"
config = "0.13.1"
rayon = "1.5"
regex = "1"
toml = "0.5.9"
lazy_static = "1.4.0"
linked_hash_set = "0.1.4"
serde = { version = "1.0.8", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_yaml = "0.9"
strum = { version = "0.24", features = ["derive"] }
convert_case = "0.6.0"
pathfinding = "3.0.13"
syn = { version = "1.0.102", features = ["full", "extra-traits"] }
log = "0.4.0"
env_logger = "0.10.0"
# notan = { git = "https://github.com/joffreybesos/notan", branch = "rusty", features = ["extra", "egui", "text"] }
notan = { version = "0.13.0", features = ["extra", "egui", "text"] }
# notan = { path ="E:/Dev/notan", features = ["extra", "egui", "text"] }
locale_config = "0.3.0"
device_query = "2.1.0"

csv = "1.1"
sapi-lite = "0.1.1"
msgbox = "0.7.0"

proc_mem = "0.1.4"
obfstr = "0.4.3"
rodio = { version = "0.20.1" }
